--- a/docs/team/darrinloh.adoc
+++ b/docs/team/darrinloh.adoc
@@ -77,6 +77,7 @@ include::../DeveloperGuide.adoc[tag=addoptionalfields]
 
 * Added a mode command to change the themes (Pull request link:{repoURL}/pull/27[#27])
 * Added a organisation field into OneBook (Pull request link:{repoURL}/pull/53[#53])
+* Reported bugs (https://github.com/CS2103AUG2017-T13-B1/main/issues/125[Project LISA #125])
 
 == Project: PowerPointLabs
 
