--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -569,7 +569,7 @@ If the main data file is able to open, it will create a backup copy of the main 
 There is no implementation for the backup function. It will happen on every start up of the application.
 //end::backup[]
 
-
+//tag::modechange[]
 === Change mode mechanism
 The `mode` function is implemented by `ModeCommand`,
 which will change the background theme by replacing the current CSS and HTML files with new files.
@@ -579,6 +579,8 @@ This is done by calling ChangeCss() and ChangeHtml() in `MainWindow`.
 
 
 `UserPrefs` will contain the current theme. `MainWindow` will execute getTheme() to obtain the current theme and change it accordingly.
+//end::modechange[]
+
 
 == Documentation
 
